--- a/fico-s4apps01/zmfgorder/ui5.yaml
+++ b/fico-s4apps01/zmfgorder/ui5.yaml
@@ -18,7 +18,7 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing_BTP
+            destination: UMC_Dev_Customizing
             authenticationType: BasicAuthentication
     - name: fiori-tools-appreload
       afterMiddleware: compression
