FICO-019＆026 長期滞在＆低価法レポート 20241226

--- a/fico-s4apps01/zinventoryaging/webapp/manifest.json
+++ b/fico-s4apps01/zinventoryaging/webapp/manifest.json
@@ -27,6 +27,15 @@
           "odataVersion": "2.0"
         }
       },
+      "AuthorityService": {
+        "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+        "type": "OData",
+        "settings": {
+            "annotations": [],
+            "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+            "odataVersion": "4.0"
+        }
+      },
       "mainService_Annotation": {
         "uri": "/destinations/UMC_Dev_Customizing_BTP/sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='ZUI_INVENTORY_AGING_O2_VAN',Version='0001')/$value/",
         "type": "ODataAnnotation",
@@ -92,6 +101,16 @@
         "dataSource": "mainService",
         "preload": true,
         "settings": {}
+      },
+      "Authority": {
+        "dataSource": "AuthorityService",
+        "preload": true,
+        "settings": {
+            "synchronizationMode": "None",
+            "operationMode": "Server",
+            "autoExpandSelect": true,
+            "earlyRequests": true
+        }
       }
     },
     "resources": {
