--- a/pp-s4apps01/zmfgorderassignso/webapp/manifest.json
+++ b/pp-s4apps01/zmfgorderassignso/webapp/manifest.json
@@ -41,6 +41,15 @@
         "settings": {
           "localUri": "annotations/annotation.xml"
         }
+      },
+      "AuthorityService": {
+        "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+          "odataVersion": "4.0"
+        }
       }
     },
     "crossNavigation": {
@@ -118,6 +127,16 @@
       "local": {
         "type": "sap.ui.model.json.JSONModel",
         "preload": true
+      },
+      "Authority": {
+        "dataSource": "AuthorityService",
+        "preload": true,
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
+        }
       }
     },
     "resources": {
