20241226 SD-032 販売計画一覧 权限检查

--- a/sd-s4apps01/salesdocumentreport/webapp/manifest.json
+++ b/sd-s4apps01/salesdocumentreport/webapp/manifest.json
@@ -28,10 +28,19 @@
                 }
             },
             "mainService_Annotation": {
-                "uri": "/destinations/UMC_Dev_Customizing_BTP/sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='ZUI_SALESDOCUMENTREPORT_O2_VAN',Version='0001')/$value/",
+                "uri": "/destinations/UMC_Dev_Customizing/sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='ZUI_SALESDOCUMENTREPORT_O2_VAN',Version='0001')/$value/",
                 "type": "ODataAnnotation",
                 "settings": {
                     "localUri": "localService/mainService_Annotation.xml"
+                }
+            },
+            "AuthorityService": {
+                "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+                "type": "OData",
+                "settings": {
+                    "annotations": [],
+                    "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+                    "odataVersion": "4.0"
                 }
             }
         },
@@ -89,6 +98,16 @@
                 "dataSource": "mainService",
                 "preload": true,
                 "settings": {}
+            },
+            "Authority": {
+                "dataSource": "AuthorityService",
+                "preload": true,
+                "settings": {
+                    "synchronizationMode": "None",
+                    "operationMode": "Server",
+                    "autoExpandSelect": true,
+                    "earlyRequests": true
+                }
             }
         },
         "resources": {
