--- a/fico-s4apps01/zbindglupload/webapp/manifest.json
+++ b/fico-s4apps01/zbindglupload/webapp/manifest.json
@@ -51,6 +51,15 @@
           "localUri": "localService/ZUI_PRT_RECORD_O4/metadata.xml",
           "odataVersion": "4.0"
         }
+      },
+      "AuthorityService": {
+          "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+          "type": "OData",
+          "settings": {
+              "annotations": [],
+              "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+              "odataVersion": "4.0"
+          }
       }
     },
     "crossNavigation": {
@@ -140,6 +149,16 @@
           "autoExpandSelect": true,
           "earlyRequests": true
         }
+      },
+      "Authority": {
+          "dataSource": "AuthorityService",
+          "preload": true,
+          "settings": {
+              "synchronizationMode": "None",
+              "operationMode": "Server",
+              "autoExpandSelect": true,
+              "earlyRequests": true
+          }
       }
     },
     "resources": {
@@ -184,8 +203,7 @@
                     "upload": {
                       "press": "fico.zbindglupload.ext.controller.ListReportExt.openUploadDialog",
                       "visible": true,
-                      "enabled": true,
-                      "requiresSelection": false,
+                      "enabled": "{local>/authorityCheck/button/Upload}",
                       "text": "{i18n>i18nupload}",
                       "icon": "sap-icon://upload-to-cloud"
                     }
