--- a/fico-s4apps01/zbindglaccountlist/webapp/manifest.json
+++ b/fico-s4apps01/zbindglaccountlist/webapp/manifest.json
@@ -41,6 +41,15 @@
         "settings": {
           "localUri": "annotations/annotation.xml"
         }
+      },
+      "AuthorityService": {
+          "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+          "type": "OData",
+          "settings": {
+              "annotations": [],
+              "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+              "odataVersion": "4.0"
+          }
       }
     },
     "crossNavigation": {
@@ -109,6 +118,16 @@
             "sap-value-list": "none"
           }
         }
+      },
+      "Authority": {
+          "dataSource": "AuthorityService",
+          "preload": true,
+          "settings": {
+              "synchronizationMode": "None",
+              "operationMode": "Server",
+              "autoExpandSelect": true,
+              "earlyRequests": true
+          }
       },
       "@i18n": {
         "type": "sap.ui.model.resource.ResourceModel",
