MM mta文件注释两个APP(是否启用暂定)

--- a/mm-s4apps01/mta.yaml
+++ b/mm-s4apps01/mta.yaml
@@ -47,14 +47,14 @@ modules:
       - mmsourcelistupload.zip
       name: mmsourcelistupload
       target-path: resources/
-    - artifacts:
-      - mmpurinforecordupload.zip
-      name: mmpurinforecordupload
-      target-path: resources/
-    - artifacts:
-      - mmpurinforecordchange.zip
-      name: mmpurinforecordchange
-      target-path: resources/
+    # - artifacts:
+    #   - mmpurinforecordupload.zip
+    #   name: mmpurinforecordupload
+    #   target-path: resources/
+    # - artifacts:
+    #   - mmpurinforecordchange.zip
+    #   name: mmpurinforecordchange
+    #   target-path: resources/
     - artifacts:
       - mmpochange.zip
       name: mmpochange
@@ -100,24 +100,24 @@ modules:
     commands:
     - npm run build:cf
     supported-platforms: []
-- name: mmpurinforecordupload
-  type: html5
-  path: purinforecordupload
-  build-parameters:
-    build-result: dist
-    builder: custom
-    commands:
-    - npm run build:cf
-    supported-platforms: []
-- name: mmpurinforecordchange
-  type: html5
-  path: purinforecordchange
-  build-parameters:
-    build-result: dist
-    builder: custom
-    commands:
-    - npm run build:cf
-    supported-platforms: []
+# - name: mmpurinforecordupload
+#   type: html5
+#   path: purinforecordupload
+#   build-parameters:
+#     build-result: dist
+#     builder: custom
+#     commands:
+#     - npm run build:cf
+#     supported-platforms: []
+# - name: mmpurinforecordchange
+#   type: html5
+#   path: purinforecordchange
+#   build-parameters:
+#     build-result: dist
+#     builder: custom
+#     commands:
+#     - npm run build:cf
+#     supported-platforms: []
 - name: mmpochange
   type: html5
   path: pochange
