--- a/pp-s4apps01/zledplannedordercomponent/ui5-mock.yaml
+++ b/pp-s4apps01/zledplannedordercomponent/ui5-mock.yaml
@@ -16,8 +16,8 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing_BTP
-            authenticationType: BasicAuthentication
+            destination: UMC_Dev_Customizing
+            authenticationType: SAMLAssertion
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
@@ -42,6 +42,10 @@ server:
             metadataPath: ./webapp/localService/metadata.xml
             mockdataPath: ./webapp/localService/mockdata
             generateMockData: true
+          - urlPath: /sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/
+            generateMockData: true
+            metadataXmlPath: ./webapp/localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml
+            mockdataRootPath: ./webapp/localService/ZUI_PERMISSION_ACCESS_O4/mockdata
         annotations:
           - localPath: ./webapp/annotations/annotation.xml
             urlPath: annotations/annotation.xml
