--- a/fico-s4apps01/zdaystocktrans/ui5-mock.yaml
+++ b/fico-s4apps01/zdaystocktrans/ui5-mock.yaml
@@ -16,8 +16,8 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing_BTP
-            authenticationType: BasicAuthentication
+            destination: UMC_Dev_Customizing
+            authenticationType: SAMLAssertion
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
