--- a/bi-s4apps01/zfutureanalysis/xs-app.json
+++ b/bi-s4apps01/zfutureanalysis/xs-app.json
@@ -5,7 +5,7 @@
     {
       "source": "^/sap/(.*)$",
       "target": "/sap/$1",
-      "destination": "UMC_Dev_Customizing_BTP",
+      "destination": "UMC_Dev_Customizing",
       "authenticationType": "xsuaa",
       "csrfProtection": false
     },
