--- a/sd-s4apps01/zdndatebatchupdate/webapp/manifest.json
+++ b/sd-s4apps01/zdndatebatchupdate/webapp/manifest.json
@@ -51,6 +51,15 @@
                     "localUri": "localService/zui_prt_record_o4/metadata.xml",
                     "odataVersion": "4.0"
                 }
+            },
+            "AuthorityService": {
+                "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+                "type": "OData",
+                "settings": {
+                    "annotations": [],
+                    "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+                    "odataVersion": "4.0"
+                }
             }
         },
         "crossNavigation": {
@@ -127,6 +136,16 @@
             },
             "Print": {
                 "dataSource": "PrintService",
+                "preload": true,
+                "settings": {
+                    "synchronizationMode": "None",
+                    "operationMode": "Server",
+                    "autoExpandSelect": true,
+                    "earlyRequests": true
+                }
+            },
+            "Authority": {
+                "dataSource": "AuthorityService",
                 "preload": true,
                 "settings": {
                     "synchronizationMode": "None",
