--- a/pp-s4apps01/zproductionorderrelease/webapp/manifest.json
+++ b/pp-s4apps01/zproductionorderrelease/webapp/manifest.json
@@ -41,6 +41,15 @@
         "settings": {
           "localUri": "annotations/annotation.xml"
         }
+      },
+      "AuthorityService": {
+        "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+          "odataVersion": "4.0"
+        }
       }
     },
     "crossNavigation": {
@@ -114,6 +123,16 @@
         "type": "sap.ui.model.resource.ResourceModel",
         "uri": "i18n/i18n.properties"
       },
+      "Authority": {
+        "dataSource": "AuthorityService",
+        "preload": true,
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
+        }
+      },
       "local": {
         "type": "sap.ui.model.json.JSONModel",
         "preload": true,
@@ -141,8 +160,9 @@
                 "Actions": {
                   "Release": {
                     "id": "ReleaseButton",
-                    "text": "製造指図発行",
+                    "text": "{i18n>Release}",
                     "press": "onRelease",
+                    "enabled": "{local>/authorityCheck/button/Release}",
                     "requiresSelection": true
                   }
                 }
