--- a/sd-s4apps01/creditmantablen/ui5-mock.yaml
+++ b/sd-s4apps01/creditmantablen/ui5-mock.yaml
@@ -14,10 +14,10 @@ server:
             - /test-resources
           url: https://ui5.sap.com
         backend:
-          - path: /sap
+          - authenticationType: SAMLAssertion
+            path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing_BTP
-            authenticationType: BasicAuthentication
+            destination: UMC_Dev_Customizing
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
