--- a/sd-s4apps01/creditmantablen/webapp/manifest.json
+++ b/sd-s4apps01/creditmantablen/webapp/manifest.json
@@ -33,6 +33,15 @@
                 "settings": {
                     "localUri": "localService/mainService_Annotation.xml"
                 }
+            },
+            "AuthorityService": {
+                "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+                "type": "OData",
+                "settings": {
+                    "annotations": [],
+                    "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+                    "odataVersion": "4.0"
+                }
             }
         },
         "crossNavigation": {
@@ -92,6 +101,16 @@
                 "dataSource": "mainService",
                 "preload": true,
                 "settings": {}
+            },
+            "Authority": {
+                "dataSource": "AuthorityService",
+                "preload": true,
+                "settings": {
+                    "synchronizationMode": "None",
+                    "operationMode": "Server",
+                    "autoExpandSelect": true,
+                    "earlyRequests": true
+                }
             }
         },
         "resources": {
@@ -113,15 +132,15 @@
             },
             "routes": [
                 {
-                    "name": "RouteMain",
-                    "pattern": ":?query:",
+                    "name": "Main",
+                    "pattern": "",
                     "target": [
-                        "TargetMain"
+                        "Main"
                     ]
                 }
             ],
             "targets": {
-                "TargetMain": {
+                "Main": {
                     "viewType": "XML",
                     "transition": "slide",
                     "clearControlAggregation": false,
@@ -140,5 +159,8 @@
     "sap.cloud": {
         "public": true,
         "service": "sd-s4apps01"
+    },
+    "sap.platform.cf": {
+        "ui5VersionNumber": "1.120.18"
     }
 }
