--- a/bi-s4apps01/costanalysis/webapp/manifest.json
+++ b/bi-s4apps01/costanalysis/webapp/manifest.json
@@ -24,6 +24,15 @@
           "localUri": "localService/metadata.xml",
           "odataVersion": "2.0"
         }
+      },
+      "AuthorityService": {
+        "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+          "odataVersion": "4.0"
+        }
       }
     },
     "crossNavigation": {
@@ -80,6 +89,16 @@
         "dataSource": "mainService",
         "preload": true,
         "settings": {}
+      },
+      "Authority": {
+        "dataSource": "AuthorityService",
+        "preload": true,
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
+        }
       }
     },
     "resources": {
@@ -101,15 +120,15 @@
       },
       "routes": [
         {
-          "name": "RouteMain",
-          "pattern": ":?query:",
+          "name": "Main",
+          "pattern": "",
           "target": [
-            "TargetMain"
+            "Main"
           ]
         }
       ],
       "targets": {
-        "TargetMain": {
+        "Main": {
           "viewType": "XML",
           "transition": "slide",
           "clearControlAggregation": false,
@@ -128,5 +147,8 @@
   "sap.cloud": {
     "public": true,
     "service": "bi-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
