BI-007 長期滞留在庫予測 权限检查

--- a/bi-s4apps01/longtermforcast/webapp/manifest.json
+++ b/bi-s4apps01/longtermforcast/webapp/manifest.json
@@ -33,6 +33,15 @@
         "settings": {
           "localUri": "localService/ZUI_BI007_LONGTERM_FORC_O2_VAN.xml"
         }
+      },
+      "AuthorityService": {
+        "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+          "odataVersion": "4.0"
+        }
       }
     },
     "crossNavigation": {
@@ -66,9 +75,12 @@
     }
   },
   "sap.ui5": {
-    "flexEnabled": true,
+    "flexEnabled": false,
+    "config": {
+      "fullWidth": true
+    },
     "dependencies": {
-      "minUI5Version": "1.124.10",
+      "minUI5Version": "1.120.18",
       "libs": {
         "sap.m": {},
         "sap.ui.core": {}
@@ -89,6 +101,20 @@
         "dataSource": "mainService",
         "preload": true,
         "settings": {}
+      },
+      "Authority": {
+        "dataSource": "AuthorityService",
+        "preload": true,
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
+        }
+      },
+      "local": {
+        "type": "sap.ui.model.json.JSONModel",
+        "preload": true
       }
     },
     "resources": {
@@ -112,15 +138,15 @@
       },
       "routes": [
         {
-          "name": "RouteMainView",
-          "pattern": ":?query:",
+          "name": "Main",
+          "pattern": "",
           "target": [
-            "TargetMainView"
+            "Main"
           ]
         }
       ],
       "targets": {
-        "TargetMainView": {
+        "Main": {
           "id": "Main",
           "name": "Main"
         }
@@ -135,5 +161,8 @@
   "sap.cloud": {
     "public": true,
     "service": "bi-s4apps01"
+  },
+  "sap.platform.cf": {
+    "ui5VersionNumber": "1.120.18"
   }
 }
