--- a/bi-s4apps01/recoverymanagement/webapp/manifest.json
+++ b/bi-s4apps01/recoverymanagement/webapp/manifest.json
@@ -33,6 +33,15 @@
         "settings": {
           "localUri": "localService/ZUI_TBI_RECY_INFO001_O2_VAN.xml"
         }
+      },
+      "AuthorityService": {
+        "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+          "odataVersion": "4.0"
+        }
       }
     },
     "crossNavigation": {
@@ -66,7 +75,10 @@
     }
   },
   "sap.ui5": {
-    "flexEnabled": true,
+    "flexEnabled": false,
+    "config": {
+      "fullWidth": true
+    },
     "dependencies": {
       "minUI5Version": "1.120.18",
       "libs": {
@@ -91,6 +103,20 @@
         "settings": {
           "defaultBindingMode": "TwoWay"
         }
+      },
+      "Authority": {
+        "dataSource": "AuthorityService",
+        "preload": true,
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
+        }
+      },
+      "local": {
+        "type": "sap.ui.model.json.JSONModel",
+        "preload": true
       }
     },
     "resources": {
@@ -112,15 +138,15 @@
       },
       "routes": [
         {
-          "name": "RouteMainView",
-          "pattern": ":?query:",
+          "name": "MainView",
+          "pattern": "",
           "target": [
-            "TargetMainView"
+            "MainView"
           ]
         }
       ],
       "targets": {
-        "TargetMainView": {
+        "MainView": {
           "viewType": "XML",
           "transition": "slide",
           "clearControlAggregation": false,
@@ -141,6 +167,6 @@
     "service": "bi-s4apps01"
   },
   "sap.platform.cf": {
-      "ui5VersionNumber": "1.120.18"
+    "ui5VersionNumber": "1.120.18"
   }
 }
