--- a/fico-s4apps01/zaccountingdoc/webapp/manifest.json
+++ b/fico-s4apps01/zaccountingdoc/webapp/manifest.json
@@ -204,6 +204,7 @@
                       "press": "fico.zaccountingdoc.ext.listExtension.ListExtension.onPrint1",
                       "visible": true, 
                       "enabled": "{local>/authorityCheck/button/Export}",
+                      "requiresSelection": true,
                       "text": "{i18n>i18nprint}"
                     }
                   }
