--- a/fico-s4apps01/zmfgorder/webapp/manifest.json
+++ b/fico-s4apps01/zmfgorder/webapp/manifest.json
@@ -118,6 +118,10 @@
           "autoExpandSelect": true,
           "earlyRequests": true
         }
+      },
+      "local": {
+        "type": "sap.ui.model.json.JSONModel",
+        "preload": true
       }
     },
     "resources": {
