--- a/mm-s4apps01/uploadpurchasereq/ui5-mock.yaml
+++ b/mm-s4apps01/uploadpurchasereq/ui5-mock.yaml
@@ -16,7 +16,7 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing_BTP
+            destination: UMC_Dev_Customizing
             authenticationType: BasicAuthentication
     - name: fiori-tools-appreload
       afterMiddleware: compression
@@ -43,4 +43,4 @@ server:
           - localPath: ./webapp/annotations/annotation.xml
             urlPath: annotations/annotation.xml
           - localPath: ./webapp/localService/S4/API_CV_ATTACHMENT_SRV/API_CV_ATTACHMENT_SRV_Annotation.xml
-            urlPath: /destinations/UMC_Dev_Customizing_BTP/sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='API_CV_ATTACHMENT_ANNO_MDL',Version='0001')/$value/
+            urlPath: /destinations/UMC_Dev_Customizing/sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='API_CV_ATTACHMENT_ANNO_MDL',Version='0001')/$value/
