--- a/pp-s4apps01/oflist/webapp/manifest.json
+++ b/pp-s4apps01/oflist/webapp/manifest.json
@@ -24,6 +24,15 @@
           "localUri": "localService/metadata.xml",
           "odataVersion": "2.0"
         }
+      },
+      "AuthorityService": {
+          "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+          "type": "OData",
+          "settings": {
+              "annotations": [],
+              "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+              "odataVersion": "4.0"
+          }
       }
     },
     "crossNavigation": {
@@ -85,6 +94,16 @@
         "settings": {
           "defaultCountMode": "Inline"
         }
+      },
+      "Authority": {
+          "dataSource": "AuthorityService",
+          "preload": true,
+          "settings": {
+              "synchronizationMode": "None",
+              "operationMode": "Server",
+              "autoExpandSelect": true,
+              "earlyRequests": true
+          }
       }
     },
     "resources": {
