20250102 出荷伝票一括登録 权限检查

--- a/sd-s4apps01/batchcreationdn/webapp/manifest.json
+++ b/sd-s4apps01/batchcreationdn/webapp/manifest.json
@@ -32,6 +32,15 @@
         "uri": "/sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='ZUI_SALESORDER_U_O2_VAN',Version='0001')/$value/",
         "type": "ODataAnnotation"
       },
+      "AuthorityService": {
+          "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+          "type": "OData",
+          "settings": {
+              "annotations": [],
+              "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+              "odataVersion": "4.0"
+          }
+      },
       "annotation": {
 				"type": "ODataAnnotation",
 				"uri": "annotation/annotation.xml",
@@ -106,6 +115,16 @@
           "earlyRequests": true,
           "refreshAfterChange":false
         }
+      },
+      "Authority": {
+          "dataSource": "AuthorityService",
+          "preload": true,
+          "settings": {
+              "synchronizationMode": "None",
+              "operationMode": "Server",
+              "autoExpandSelect": true,
+              "earlyRequests": true
+          }
       }
     },
     "resources": {
