20250102 請求書出力 权限检查

--- a/sd-s4apps01/invoiceprint/webapp/manifest.json
+++ b/sd-s4apps01/invoiceprint/webapp/manifest.json
@@ -42,6 +42,15 @@
           "localUri": "localService/ZUI_PRT_RECORD_O4/metadata.xml",
           "odataVersion": "4.0"
         }
+      },
+      "AuthorityService": {
+        "uri": "/sap/opu/odata4/sap/zui_permission_access_o4/srvd/sap/zui_permission_access_o4/0001/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/ZUI_PERMISSION_ACCESS_O4/metadata.xml",
+          "odataVersion": "4.0"
+        }
       }
     },
     "crossNavigation": {
@@ -120,6 +129,20 @@
           "autoExpandSelect": true,
           "earlyRequests": true
         }
+      },
+      "Authority": {
+        "dataSource": "AuthorityService",
+        "preload": true,
+        "settings": {
+          "synchronizationMode": "None",
+          "operationMode": "Server",
+          "autoExpandSelect": true,
+          "earlyRequests": true
+        }
+      },
+      "local": {
+        "type": "sap.ui.model.json.JSONModel",
+        "preload": true
       }
     },
     "resources": {
@@ -157,21 +180,21 @@
                     "ListReportExt": {
                       "press": "sd.invoiceprint.ext.listReportExt.ListReportExt.onPrint",
                       "visible": true,
-                      "enabled": true,
+                      "enabled": "{local>/authorityCheck/button/Print}",
                       "requiresSelection": true,
                       "text": "{i18n>print}"
                     },
                     "reprint": {
                       "press": "sd.invoiceprint.ext.listReportExt.ListReportExt.onReprint",
                       "visible": true,
-                      "enabled": true,
+                      "enabled": "{local>/authorityCheck/button/Reprint}",
                       "requiresSelection": true,
                       "text": "{i18n>reprint}"
                     },
                     "delete": {
                       "press": "sd.invoiceprint.ext.listReportExt.ListReportExt.onDelete",
                       "visible": true,
-                      "enabled": true,
+                      "enabled": "{local>/authorityCheck/button/Clear}",
                       "requiresSelection": true,
                       "text": "{i18n>delete}"
                     }
