--- a/sd-s4apps01/shipmentstorageloc/ui5-mock.yaml
+++ b/sd-s4apps01/shipmentstorageloc/ui5-mock.yaml
@@ -18,7 +18,7 @@ server:
         backend:
           - path: /sap
             url: https://my412552-api.s4hana.cloud.sap
-            destination: UMC_Dev_Customizing_BTP
+            destination: UMC_Dev_Customizing
             authenticationType: BasicAuthentication
     - name: fiori-tools-appreload
       afterMiddleware: compression
