BC-008 カスタム印刷テンプレート 新增APP+权限检查

--- a/bc-s4apps01/mta.yaml
+++ b/bc-s4apps01/mta.yaml
@@ -71,6 +71,10 @@ modules:
       - bczauthorityapplicationlist.zip
       name: bczauthorityapplicationlist
       target-path: resources/
+    - artifacts:
+      - bczprinttemplate.zip
+      name: bczprinttemplate
+      target-path: resources/
 - name: bczdtimpconf
   type: html5
   path: zdtimpconf
@@ -128,6 +132,15 @@ modules:
 - name: bczauthorityapplicationlist
   type: html5
   path: zauthorityapplicationlist
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm run build:cf
+    supported-platforms: []
+- name: bczprinttemplate
+  type: html5
+  path: zprinttemplate
   build-parameters:
     build-result: dist
     builder: custom
